# Physis

./: .build.yml  .gitattributes  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  REUSE.toml  build.rs  deny.toml
.github/workflows/: main.yml
.reuse/: dep5
benches/: benchmark.rs  physis_benchmark.rs  retail_benchmark.rs
docs/: architecture.md
examples/: extractor.rs
resources/tests/: FFXIV.cfg  FFXIV.modified.cfg  c0201e0038_top_zeroed.mdl  empty.lcb  empty.svb  empty_planlive.lgb  gcshop.exh  gcshop_1441792.exd  lenv_s1h1_outdoor.envb  openingsystemdefine.exh  openingsystemdefine_0.exd  padded_planner.lgb  physicsgroup.exh  physicsgroup_1.exd  random  sgbg_s1t0_a0_lmp1.sgb  sgbg_w_aet_001_01a.sgb  sgbg_w_mpc_002_11a.sgb  simple.tera  simple_planevent.lgb  simple_sound.lgb  territorytypetransient.exh  territorytypetransient_1.exd  test.exl  test.fiin  triangle.pcb
resources/tests/ffxiv/: ffxivgame.ver
src/: amb.rs  atch.rs  avfx.rs  blowfish.rs  blowfish_constants.rs  bootdata.rs  cfg.rs  chardat.rs  cmp.rs  common.rs  common_file_operations.rs  compression.rs  crc.rs  cutb.rs  dat.rs  dic.rs  eid.rs  envb.rs  envs.rs  equipment.rs  error.rs  essb.rs  excel.rs  excel_iterators.rs  exd.rs  exd_file_operations.rs  execlookup.rs  exh.rs  existing_dirs.rs  exl.rs  fdt.rs  fiin.rs  gamedata.rs  gearsets.rs  hwc.rs  index.rs  installer.rs  iwc.rs  lcb.rs  lgb.rs  (+37 more)
src/bcn/: bc1.rs  bc3.rs  bc5.rs  bc7.rs  bitreader.rs  color.rs  consts.rs  macros.rs  mod.rs
src/blowfish/: lobby.rs  mod.rs  sqexarg.rs  steam.rs
src/excel/: iterators.rs  mod.rs
src/havok/: animation.rs  animation_binding.rs  animation_container.rs  binary_tag_file_reader.rs  mod.rs  object.rs  skeleton.rs  slice_ext.rs  spline_compressed_animation.rs
src/layer/: aetheryte.rs  bg.rs  collision.rs  common.rs  env.rs  env_set.rs  event.rs  exit_range.rs  gathering.rs  light.rs  marker.rs  mod.rs  npc.rs  path.rs  pop.rs  position_marker.rs  range.rs  scn.rs  shared_group.rs  sound.rs  string_heap.rs  transformation.rs  treasure.rs  trigger_box.rs  vfx.rs
src/model/: file_operations.rs  mod.rs  vertex_declarations.rs
src/resource/: mod.rs  resolver.rs  sqpack.rs  unpacked.rs
src/savedata/: chardat.rs  dat.rs  gearsets.rs  log.rs  mod.rs
src/sqpack/: data.rs  db.rs  index.rs  mod.rs
tests/: integration_test.rs  patch_test.rs  patching_test.rs  retail_test.rs
