[package]
name = "physis"
version = "0.6.0"
authors = ["Joshua Goins <josh@redstrate.com>"]
edition = "2024"
description = "Library for reading and writing FFXIV data."
license = "GPL-3.0"
repository = "https://github.com/redstrate/Physis"
keywords = ["ffxiv", "modding"]
documentation = "https://docs.xiv.zone/docs/physis/"
readme = "README.md"

[[test]]
name = "retail_test"
required-features = ["retail_testing"]

[features]
default = []

# testing only features
retail_testing = []

[dependencies]
# amazing binary parsing/writing library
binrw = { version = "0.15", features = ["std"], default-features = false }

# used for zlib compression in sqpack files
libz-rs-sys = { version = "0.5", features = ["std", "rust-allocator"], default-features = false }

# needed for half-float support which FFXIV uses in its model data
half = { version = "2.7", features = ["std"], default-features = false }

# needed for c-style bitflags used in some formats (such as tex files)
bitflags = { version = "2.10", default-features = false }
